# chat_hateoas

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
chat_hateoas/: __init__.py  config.py  db.py  schema.sql
chat_hateoas/routes/: stream.py  web.py
chat_hateoas/services/: mock_bedrock.py  render.py  transform.py
static/: app.css
templates/: base.html
templates/chat/: _assistant_stream_shell.html  _conversation_list.html  _fake_action_result.html  _feedback.html  _message.html  _thread.html  index.html
tests/: conftest.py  test_feedback.py  test_stream.py  test_transform.py  test_web.py
